--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "./src/server.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.jsx",
-    "build": "webpack -d",
-    "build:watch": "webpack -d -w"
+    "start": "node server.jsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
